src/objects/collect__Collection_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Contact_City__c</fullName>
        <formula>collect__Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <formula>collect__Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>collect__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Post_Code__c</fullName>
        <formula>collect__Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <formula>collect__Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquent_Amount__c</fullName>
        <formula>Loan_Contract__r.loan__Delinquent_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Collection Activities</relationshipLabel>
        <relationshipName>Collection_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>collect__Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collection_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collection Activities</relationshipLabel>
        <relationshipName>Collection_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Collection_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Configuration</label>
        <referenceTo>collect__Collection_Configuration__c</referenceTo>
        <relationshipLabel>Collection Activities</relationshipLabel>
        <relationshipName>Collection_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>cnotify__Configuration__c</referenceTo>
        <relationshipLabel>Collection Activities</relationshipLabel>
        <relationshipName>Collection_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collection Activities</relationshipLabel>
        <relationshipName>Collection_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Days_Past_Due__c</fullName>
        <label>Days Past Due</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Dunning_Letter_Id__c</fullName>
        <label>Dunning Letter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Fees_Due__c</fullName>
        <label>Fees Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>collect__Lease_Account_Id__c</fullName>
        <label>Lease Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account_Id__c</fullName>
        <label>Loan Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account_Name__c</fullName>
        <label>Loan Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Oldest_Due_Date__c</fullName>
        <label>Oldest Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Principal_Interest_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal &amp; Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>collect__Reminder_Day__c</fullName>
        <label>Reminder Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Collection Activity</label>
    <listViews>
        <fullName>collect__All</fullName>
        <columns>NAME</columns>
        <columns>collect__Loan_Account_Name__c</columns>
        <columns>collect__Account_Manager__c</columns>
        <columns>collect__Reminder_Day__c</columns>
        <columns>collect__Days_Past_Due__c</columns>
        <columns>collect__Action__c</columns>
        <columns>collect__Completed__c</columns>
        <columns>collect__Account__c</columns>
        <columns>collect__Contact__c</columns>
        <columns>collect__Oldest_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAT-{00000000}</displayFormat>
        <label>Collection Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>